--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -34,7 +34,7 @@ tools:context=".TodoList">
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:ems="10"
-    android:hint=" . . ."
+    android:hint=" 할 일 입력 "
     android:inputType="textPersonName"
     app:layout_constraintEnd_toStartOf="@+id/add_button"
     app:layout_constraintStart_toStartOf="parent"
