--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -11,58 +11,77 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:padding="5dp"
-                tools:srcCompat="@tools:sample/avatars"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@mipmap/ic_launcher"
+                tools:layout_editor_absoluteY="0dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txtName"
-                    android:layout_width="255dp"
-                    android:layout_height="wrap_content"
-                    android:text="이름"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/txtName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="이름"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+            <TextView
+                android:id="@+id/txtPhoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginBottom="32dp"
+                android:text="전화번호"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="#FF0000FF"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView" />
 
-                    <TextView
-                        android:id="@+id/txtPhoneNumber"
-                        android:layout_width="254dp"
-                        android:layout_height="wrap_content"
-                        android:text="전화번호"
-                        android:textAppearance="?android:textAppearanceSmall"
-                        android:textColor="#FF0000FF"
-                        android:textSize="15sp" />
+            <ImageButton
+                android:id="@+id/BtnDial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="20dp"
+                android:backgroundTint="#4CAF50"
+                app:layout_constraintBottom_toTopOf="@+id/BtnMsg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/baseline_call_24" />
 
-                    <ImageButton
-                        android:id="@+id/BtnDial"
-                        android:layout_width="27dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/baseline_call_24" />
+            <ImageButton
+                android:id="@+id/BtnMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="#FF9800"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/BtnDial"
+                app:srcCompat="@drawable/baseline_message_24" />
 
-                </LinearLayout>
 
-            </LinearLayout>
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
