투두리스트 데이터 저장

--- a/app/src/main/res/layout/dialog_edit_todo.xml
+++ b/app/src/main/res/layout/dialog_edit_todo.xml
@@ -7,7 +7,7 @@
         android:id="@+id/editList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your task"
+        android:hint=" "
         android:padding="16dp" />
 
 </LinearLayout>
