--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -20,8 +20,8 @@
 
             <ImageView
                 android:id="@+id/contact_photo_imageview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginTop="8dp"
                 android:padding="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
