--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -86,6 +86,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/contact_text_name"
+                android:textColor="@color/black"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtPhoneNumber"
