--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -84,10 +84,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/contact_text_name"
-                android:textColor="@color/black"
                 android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtPhoneNumber"
                 app:layout_constraintStart_toEndOf="@+id/contact_photo_imageview"
@@ -95,16 +95,18 @@
 
             <TextView
                 android:id="@+id/txtPhoneNumber"
-                android:layout_width="wrap_content"
+                android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/contact_text_phoneNumber"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="#FF0000FF"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/contact_photo_imageview" />
+                app:layout_constraintStart_toEndOf="@+id/contact_photo_imageview"
+                app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
             <ImageButton
                 android:id="@+id/BtnDial"
